Work on GitHub pages for now, cname/aname next week?

--- a/components/navbar/index.html
+++ b/components/navbar/index.html
@@ -14,35 +14,35 @@
 </title>
 
 <!-- Favicons -->
-<link rel="apple-touch-icon" href="/apple-touch-icon.png">
-<link rel="icon" href="/favicon.ico">
+<link rel="apple-touch-icon" href="/figuration/apple-touch-icon.png">
+<link rel="icon" href="/figuration/favicon.ico">
 
 <!-- Core CSS -->
 
-  <link href="/dist/css/figuration.min.css" rel="stylesheet">
+  <link href="/figuration/dist/css/figuration.min.css" rel="stylesheet">
 
 
 <!-- Docs CSS -->
 
-  <link href="/assets/css/docs.min.css" rel="stylesheet">
+  <link href="/figuration/assets/css/docs.min.css" rel="stylesheet">
 
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.0.0/jquery.min.js" integrity="sha384-THPy051/pYDQGanwU6poAc/hOdQxjnOEXzbT+OuUAFqNqFjL+4IGLBgCJC3ZOShY" crossorigin="anonymous"></script>
-<script>window.jQuery || document.write('<script src="/assets/js/vendor/jquery.min.js"><\/script>')</script>
+<script>window.jQuery || document.write('<script src="/figuration/assets/js/vendor/jquery.min.js"><\/script>')</script>
 
 <!-- Core JS -->
 
-  <script src="/dist/js/figuration.min.js"></script>
+  <script src="/figuration/dist/js/figuration.min.js"></script>
 
 
 <!-- Docs JS -->
 
-  <script src="/assets/js/docs.min.js"></script>
+  <script src="/figuration/assets/js/docs.min.js"></script>
 
 
 <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-<script src="/assets/js/ie10-viewport-bug-workaround.js"></script>
-<script src="/assets/js/ie-emulation-modes-warning.js"></script>
+<script src="/figuration/assets/js/ie10-viewport-bug-workaround.js"></script>
+<script src="/figuration/assets/js/ie-emulation-modes-warning.js"></script>
 </head>
 <body>
     <a class="skipnav" href="#content">Skip to main content</a>
@@ -50,7 +50,7 @@
     <header class="navbar navbar-full navbar-dark cf-header">
     <div class="container">
         <nav>
-            <a class="navbar-brand" href="/">CAST Figuration</a>
+            <a class="navbar-brand" href="/figuration/">CAST Figuration</a>
             <div class="clearfix hidden-md-up">
                 <button class="navbar-toggler btn btn-toggler pull-xs-right" type="button" data-cfw="collapse" data-cfw-collapse-toggle="#cf-topnav" data-cfw-collapse-hidden="false" aria-label="Toggle navigation">
                     <span aria-hidden="true">&#9776;</span>
@@ -59,22 +59,22 @@
             <div class="collapse navbar-toggleable-sm" id="cf-topnav">
                 <ul class="nav navbar-nav">
                     <li class="nav-item ">
-                        <a href="/get-started/quick-start/" class="nav-link">Get Started</a>
+                        <a href="/figuration/get-started/quick-start/" class="nav-link">Get Started</a>
                     </li>
                     <li class="nav-item ">
-                        <a href="/layout/overview/" class="nav-link">Layout</a>
+                        <a href="/figuration/layout/overview/" class="nav-link">Layout</a>
                     </li>
                     <li class="nav-item ">
-                        <a href="/content/reboot/" class="nav-link">Content</a>
+                        <a href="/figuration/content/reboot/" class="nav-link">Content</a>
                     </li>
                     <li class="nav-item active">
-                        <a href="/components/alerts/" class="nav-link">Components</a>
+                        <a href="/figuration/components/alerts/" class="nav-link">Components</a>
                     </li>
                     <li class="nav-item ">
-                        <a href="/widgets/overview" class="nav-link">Widgets</a>
+                        <a href="/figuration/widgets/overview" class="nav-link">Widgets</a>
                     </li>
                     <li class="nav-item ">
-                        <a href="/about/overview" class="nav-link">About</a>
+                        <a href="/figuration/about/overview" class="nav-link">About</a>
                     </li>
                 </ul>
             </div>
@@ -129,7 +129,7 @@
         
 
         <li class="nav-item">
-          <a href="/components/alerts" class="nav-link ">
+          <a href="/figuration/components/alerts" class="nav-link ">
             Alerts
           </a>
         </li>
@@ -141,7 +141,7 @@
         
 
         <li class="nav-item">
-          <a href="/components/breadcrumb" class="nav-link ">
+          <a href="/figuration/components/breadcrumb" class="nav-link ">
             Breadcrumb
           </a>
         </li>
@@ -153,7 +153,7 @@
         
 
         <li class="nav-item">
-          <a href="/components/button-group" class="nav-link ">
+          <a href="/figuration/components/button-group" class="nav-link ">
             Button Group
           </a>
         </li>
@@ -165,7 +165,7 @@
         
 
         <li class="nav-item">
-          <a href="/components/cards" class="nav-link ">
+          <a href="/figuration/components/cards" class="nav-link ">
             Cards
           </a>
         </li>
@@ -177,7 +177,7 @@
         
 
         <li class="nav-item">
-          <a href="/components/grid-lines" class="nav-link ">
+          <a href="/figuration/components/grid-lines" class="nav-link ">
             Grid Lines
           </a>
         </li>
@@ -189,7 +189,7 @@
         
 
         <li class="nav-item">
-          <a href="/components/input-group" class="nav-link ">
+          <a href="/figuration/components/input-group" class="nav-link ">
             Input Group
           </a>
         </li>
@@ -201,7 +201,7 @@
         
 
         <li class="nav-item">
-          <a href="/components/jumbotron" class="nav-link ">
+          <a href="/figuration/components/jumbotron" class="nav-link ">
             Jumbotron
           </a>
         </li>
@@ -213,7 +213,7 @@
         
 
         <li class="nav-item">
-          <a href="/components/list-group" class="nav-link ">
+          <a href="/figuration/components/list-group" class="nav-link ">
             List Group
           </a>
         </li>
@@ -225,7 +225,7 @@
         
 
         <li class="nav-item">
-          <a href="/components/media-object" class="nav-link ">
+          <a href="/figuration/components/media-object" class="nav-link ">
             Media Object
           </a>
         </li>
@@ -237,7 +237,7 @@
         
 
         <li class="nav-item">
-          <a href="/components/navbar" class="nav-link active">
+          <a href="/figuration/components/navbar" class="nav-link active">
             Navbar
           </a>
         </li>
@@ -249,7 +249,7 @@
         
 
         <li class="nav-item">
-          <a href="/components/navs" class="nav-link ">
+          <a href="/figuration/components/navs" class="nav-link ">
             Navs
           </a>
         </li>
@@ -261,7 +261,7 @@
         
 
         <li class="nav-item">
-          <a href="/components/pagination" class="nav-link ">
+          <a href="/figuration/components/pagination" class="nav-link ">
             Pagination
           </a>
         </li>
@@ -273,7 +273,7 @@
         
 
         <li class="nav-item">
-          <a href="/components/progress" class="nav-link ">
+          <a href="/figuration/components/progress" class="nav-link ">
             Progress
           </a>
         </li>
@@ -285,7 +285,7 @@
         
 
         <li class="nav-item">
-          <a href="/components/tags" class="nav-link ">
+          <a href="/figuration/components/tags" class="nav-link ">
             Tags
           </a>
         </li>
@@ -297,7 +297,7 @@
         
 
         <li class="nav-item">
-          <a href="/components/utilities" class="nav-link ">
+          <a href="/figuration/components/utilities" class="nav-link ">
             Utilities
           </a>
         </li>
@@ -324,7 +324,7 @@
                     
                 </h1>
 
-                <p>The navbar is a simple wrapper for positioning branding, navigation, and other elements into a concise navigation header. It’s easily extensible and, with the help of our <a href="/widgets/collapse/">Collapse widget</a>, it can easily integrate offscreen content.</p>
+                <p>The navbar is a simple wrapper for positioning branding, navigation, and other elements into a concise navigation header. It’s easily extensible and, with the help of our <a href="/figuration/widgets/collapse/">Collapse widget</a>, it can easily integrate offscreen content.</p>
 
 <h2 class="no_toc" id="contents">Contents</h2>
 
@@ -361,7 +361,7 @@
 <ul>
   <li><code class="highlighter-rouge">.navbar-brand</code> for your company, product, or project name</li>
   <li><code class="highlighter-rouge">.navbar-nav</code> for a full-height and lightweight navigation (including support for dropdowns)</li>
-  <li><code class="highlighter-rouge">.navbar-toggler</code> for use with our <a href="/widgets/collapse/">Collapse widget</a> and other <a href="#collapsing-content">navigation toggling</a> behaviors.</li>
+  <li><code class="highlighter-rouge">.navbar-toggler</code> for use with our <a href="/figuration/widgets/collapse/">Collapse widget</a> and other <a href="#collapsing-content">navigation toggling</a> behaviors.</li>
 </ul>
 
 <p>Here’s an example of all the sub-components included in a default, light navbar:</p>
@@ -731,7 +731,7 @@
 
 <h2 id="collapsible-content">Collapsible Content</h2>
 
-<p>Our <a href="/widgets/collapse/">Collapse widget</a> allows you to use a <code class="highlighter-rouge">&lt;button&gt;</code> or <code class="highlighter-rouge">&lt;a&gt;</code> to toggle hidden content.</p>
+<p>Our <a href="/figuration/widgets/collapse/">Collapse widget</a> allows you to use a <code class="highlighter-rouge">&lt;button&gt;</code> or <code class="highlighter-rouge">&lt;a&gt;</code> to toggle hidden content.</p>
 
 <div class="cf-example" data-example-id="">
 <nav class="navbar navbar-light bg-faded">
@@ -833,7 +833,7 @@
         <strong>Funding generously provided by:</strong>
         <div class="media footer-partners">
             <div class="media-left">
-                <img src="/assets/img/aem-logo.png" class="media-object" width="40" height="40" alt="AEM logo" />
+                <img src="/figuration/assets/img/aem-logo.png" class="media-object" width="40" height="40" alt="AEM logo" />
             </div>
             <div class="media-body">
                 <span class="h6 partner-title"><a href="http://aem.cast.org">National Center on Accessible Educational Materials at CAST, Inc.</a></span><br />
