--- a/layout/grid/index.html
+++ b/layout/grid/index.html
@@ -14,35 +14,35 @@
 </title>
 
 <!-- Favicons -->
-<link rel="apple-touch-icon" href="/apple-touch-icon.png">
-<link rel="icon" href="/favicon.ico">
+<link rel="apple-touch-icon" href="/figuration/apple-touch-icon.png">
+<link rel="icon" href="/figuration/favicon.ico">
 
 <!-- Core CSS -->
 
-  <link href="/dist/css/figuration.min.css" rel="stylesheet">
+  <link href="/figuration/dist/css/figuration.min.css" rel="stylesheet">
 
 
 <!-- Docs CSS -->
 
-  <link href="/assets/css/docs.min.css" rel="stylesheet">
+  <link href="/figuration/assets/css/docs.min.css" rel="stylesheet">
 
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.0.0/jquery.min.js" integrity="sha384-THPy051/pYDQGanwU6poAc/hOdQxjnOEXzbT+OuUAFqNqFjL+4IGLBgCJC3ZOShY" crossorigin="anonymous"></script>
-<script>window.jQuery || document.write('<script src="/assets/js/vendor/jquery.min.js"><\/script>')</script>
+<script>window.jQuery || document.write('<script src="/figuration/assets/js/vendor/jquery.min.js"><\/script>')</script>
 
 <!-- Core JS -->
 
-  <script src="/dist/js/figuration.min.js"></script>
+  <script src="/figuration/dist/js/figuration.min.js"></script>
 
 
 <!-- Docs JS -->
 
-  <script src="/assets/js/docs.min.js"></script>
+  <script src="/figuration/assets/js/docs.min.js"></script>
 
 
 <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-<script src="/assets/js/ie10-viewport-bug-workaround.js"></script>
-<script src="/assets/js/ie-emulation-modes-warning.js"></script>
+<script src="/figuration/assets/js/ie10-viewport-bug-workaround.js"></script>
+<script src="/figuration/assets/js/ie-emulation-modes-warning.js"></script>
 </head>
 <body>
     <a class="skipnav" href="#content">Skip to main content</a>
@@ -50,7 +50,7 @@
     <header class="navbar navbar-full navbar-dark cf-header">
     <div class="container">
         <nav>
-            <a class="navbar-brand" href="/">CAST Figuration</a>
+            <a class="navbar-brand" href="/figuration/">CAST Figuration</a>
             <div class="clearfix hidden-md-up">
                 <button class="navbar-toggler btn btn-toggler pull-xs-right" type="button" data-cfw="collapse" data-cfw-collapse-toggle="#cf-topnav" data-cfw-collapse-hidden="false" aria-label="Toggle navigation">
                     <span aria-hidden="true">&#9776;</span>
@@ -59,22 +59,22 @@
             <div class="collapse navbar-toggleable-sm" id="cf-topnav">
                 <ul class="nav navbar-nav">
                     <li class="nav-item ">
-                        <a href="/get-started/quick-start/" class="nav-link">Get Started</a>
+                        <a href="/figuration/get-started/quick-start/" class="nav-link">Get Started</a>
                     </li>
                     <li class="nav-item active">
-                        <a href="/layout/overview/" class="nav-link">Layout</a>
+                        <a href="/figuration/layout/overview/" class="nav-link">Layout</a>
                     </li>
                     <li class="nav-item ">
-                        <a href="/content/reboot/" class="nav-link">Content</a>
+                        <a href="/figuration/content/reboot/" class="nav-link">Content</a>
                     </li>
                     <li class="nav-item ">
-                        <a href="/components/alerts/" class="nav-link">Components</a>
+                        <a href="/figuration/components/alerts/" class="nav-link">Components</a>
                     </li>
                     <li class="nav-item ">
-                        <a href="/widgets/overview" class="nav-link">Widgets</a>
+                        <a href="/figuration/widgets/overview" class="nav-link">Widgets</a>
                     </li>
                     <li class="nav-item ">
-                        <a href="/about/overview" class="nav-link">About</a>
+                        <a href="/figuration/about/overview" class="nav-link">About</a>
                     </li>
                 </ul>
             </div>
@@ -119,7 +119,7 @@
         
 
         <li class="nav-item">
-          <a href="/layout/overview" class="nav-link ">
+          <a href="/figuration/layout/overview" class="nav-link ">
             Overview
           </a>
         </li>
@@ -131,7 +131,7 @@
         
 
         <li class="nav-item">
-          <a href="/layout/grid" class="nav-link active">
+          <a href="/figuration/layout/grid" class="nav-link active">
             Grid
           </a>
         </li>
@@ -143,7 +143,7 @@
         
 
         <li class="nav-item">
-          <a href="/layout/responsive-utilities" class="nav-link ">
+          <a href="/figuration/layout/responsive-utilities" class="nav-link ">
             Responsive Utilities
           </a>
         </li>
@@ -180,7 +180,7 @@
                     
                 </h1>
 
-                <p>Figuration includes a powerful mobile-first grid system for building layouts of all shapes and sizes. It’s based on a 12 column layout and has multiple tiers, one for each <a href="/layout/overview/#responsive-breakpoints">media query range</a>. You can use it with Sass mixins or our predefined classes.</p>
+                <p>Figuration includes a powerful mobile-first grid system for building layouts of all shapes and sizes. It’s based on a 12 column layout and has multiple tiers, one for each <a href="/figuration/layout/overview/#responsive-breakpoints">media query range</a>. You can use it with Sass mixins or our predefined classes.</p>
 
 <h2 class="no_toc" id="contents">Contents</h2>
 
@@ -220,7 +220,7 @@
   <li>Column classes indicate the number of columns you’d like to use out of the possible 12 per row. So if you want three equal-width columns, you’d use <code class="highlighter-rouge">.col-sm-4</code>.</li>
   <li>Column <code class="highlighter-rouge">width</code>s are set in percentages, so they’re always fluid and sized relative to their parent element.</li>
   <li>Columns have horizontal <code class="highlighter-rouge">padding</code> to create the gutters between individual columns.</li>
-  <li>There are five grid tiers, one for each <a href="/layout/overview/#responsive-breakpoints">responsive breakpoint</a>: extra small, small, medium, large, and extra large.</li>
+  <li>There are five grid tiers, one for each <a href="/figuration/layout/overview/#responsive-breakpoints">responsive breakpoint</a>: extra small, small, medium, large, and extra large.</li>
   <li>Grid tiers are based on minimum widths, meaning they apply to that one tier and all those above it (e.g., <code class="highlighter-rouge">.col-sm-4</code> applies to small, medium, large, and extra large devices).</li>
   <li>You can use predefined grid classes or Sass mixins for more semantic markup.</li>
 </ul>
@@ -514,7 +514,7 @@
 
 <h3 id="example-responsive-column-resets">Example: Responsive Column Resets</h3>
 
-<p>With the four tiers of grids available you’re bound to run into issues where, at certain breakpoints, your columns don’t clear quite right as one is taller than the other. To fix that, use a combination of a <code class="highlighter-rouge">.clearfix</code> and our <a href="/layout/responsive-utilities/">responsive utility classes</a>.</p>
+<p>With the four tiers of grids available you’re bound to run into issues where, at certain breakpoints, your columns don’t clear quite right as one is taller than the other. To fix that, use a combination of a <code class="highlighter-rouge">.clearfix</code> and our <a href="/figuration/layout/responsive-utilities/">responsive utility classes</a>.</p>
 
 <div class="cf-example-row">
 
@@ -542,7 +542,7 @@
 
 </div>
 
-<p>In addition to column clearing at responsive breakpoints, you may need to <strong>reset offsets, pushes, or pulls</strong>. See this in action in <a href="/examples/grid/">the grid example</a>.</p>
+<p>In addition to column clearing at responsive breakpoints, you may need to <strong>reset offsets, pushes, or pulls</strong>. See this in action in <a href="/figuration/examples/grid/">the grid example</a>.</p>
 
 <div class="cf-example-row">
 
@@ -802,7 +802,7 @@
         <strong>Funding generously provided by:</strong>
         <div class="media footer-partners">
             <div class="media-left">
-                <img src="/assets/img/aem-logo.png" class="media-object" width="40" height="40" alt="AEM logo" />
+                <img src="/figuration/assets/img/aem-logo.png" class="media-object" width="40" height="40" alt="AEM logo" />
             </div>
             <div class="media-body">
                 <span class="h6 partner-title"><a href="http://aem.cast.org">National Center on Accessible Educational Materials at CAST, Inc.</a></span><br />
