don't remove border-radius on checkbox/radio inputs for iOS

--- a/scss/core/_reboot.scss
+++ b/scss/core/_reboot.scss
@@ -309,7 +309,7 @@ button:focus {
     outline: 5px auto -webkit-focus-ring-color;
 }
 
-input,
+input:not([type="checkbox"]):not([type="radio"]),
 button,
 select,
 textarea {
