update to v1.0.0 and new domain

--- a/docs/_includes/footer.html
+++ b/docs/_includes/footer.html
@@ -1,6 +1,10 @@
 <footer class="cf-footer">
     <div class="container">
-        <p>Currently version: {{ site.current_version }}</p>
+        <p>
+            Currently version: {{ site.current_version }}
+            <br />
+            <a href="https://github.com/cast-org/figuration">GitHub Project</a> - <a href="https://github.com/cast-org/figuration/issues">Issues</a>
+        </p>
         <p>
             &copy; 2013-{{ 'now' | date: "%Y" }} <a href="http://www.cast.org">CAST, Inc.</a>
             <br />
