--- a/docs/_includes/nav-main.html
+++ b/docs/_includes/nav-main.html
@@ -27,6 +27,9 @@
                     <li class="nav-item {% if page.group == "about" %}active{% endif %}">
                         <a href="{{ site.baseurl }}/about/overview" class="nav-link">About</a>
                     </li>
+                    <li class="nav-item pull-md-right">
+                        <a href="{{ site.repo }}" class="nav-link"><small>GitHub</small></a>
+                    <li>
                 </ul>
             </div>
         </nav>
