--- a/components/index.html
+++ b/components/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
 <title>Redirecting…</title>
-<link rel="canonical" href="/figuration/widgets/alert/">
-<meta http-equiv="refresh" content="0; url=/figuration/widgets/alert/">
+<link rel="canonical" href="/widgets/alert/">
+<meta http-equiv="refresh" content="0; url=/widgets/alert/">
 <h1>Redirecting…</h1>
-<a href="/figuration/widgets/alert/">Click here if you are not redirected.</a>
-<script>location="/figuration/widgets/alert/"</script>
+<a href="/widgets/alert/">Click here if you are not redirected.</a>
+<script>location="/widgets/alert/"</script>
