--- a/components/list-group/index.html
+++ b/components/list-group/index.html
@@ -14,35 +14,35 @@
 </title>
 
 <!-- Favicons -->
-<link rel="apple-touch-icon" href="/figuration/apple-touch-icon.png">
-<link rel="icon" href="/figuration/favicon.ico">
+<link rel="apple-touch-icon" href="/apple-touch-icon.png">
+<link rel="icon" href="/favicon.ico">
 
 <!-- Core CSS -->
 
-  <link href="/figuration/dist/css/figuration.min.css" rel="stylesheet">
+  <link href="/dist/css/figuration.min.css" rel="stylesheet">
 
 
 <!-- Docs CSS -->
 
-  <link href="/figuration/assets/css/docs.min.css" rel="stylesheet">
+  <link href="/assets/css/docs.min.css" rel="stylesheet">
 
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.0.0/jquery.min.js" integrity="sha384-THPy051/pYDQGanwU6poAc/hOdQxjnOEXzbT+OuUAFqNqFjL+4IGLBgCJC3ZOShY" crossorigin="anonymous"></script>
-<script>window.jQuery || document.write('<script src="/figuration/assets/js/vendor/jquery.min.js"><\/script>')</script>
+<script>window.jQuery || document.write('<script src="/assets/js/vendor/jquery.min.js"><\/script>')</script>
 
 <!-- Core JS -->
 
-  <script src="/figuration/dist/js/figuration.min.js"></script>
+  <script src="/dist/js/figuration.min.js"></script>
 
 
 <!-- Docs JS -->
 
-  <script src="/figuration/assets/js/docs.min.js"></script>
+  <script src="/assets/js/docs.min.js"></script>
 
 
 <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-<script src="/figuration/assets/js/ie10-viewport-bug-workaround.js"></script>
-<script src="/figuration/assets/js/ie-emulation-modes-warning.js"></script>
+<script src="/assets/js/ie10-viewport-bug-workaround.js"></script>
+<script src="/assets/js/ie-emulation-modes-warning.js"></script>
 </head>
 <body>
     <a class="skipnav" href="#content">Skip to main content</a>
@@ -50,7 +50,7 @@
     <header class="navbar navbar-full navbar-dark cf-header">
     <div class="container">
         <nav>
-            <a class="navbar-brand" href="/figuration/">CAST Figuration</a>
+            <a class="navbar-brand" href="/">CAST Figuration</a>
             <div class="clearfix hidden-md-up">
                 <button class="navbar-toggler btn btn-toggler pull-xs-right" type="button" data-cfw="collapse" data-cfw-collapse-toggle="#cf-topnav" data-cfw-collapse-hidden="false" aria-label="Toggle navigation">
                     <span aria-hidden="true">&#9776;</span>
@@ -59,23 +59,26 @@
             <div class="collapse navbar-toggleable-sm" id="cf-topnav">
                 <ul class="nav navbar-nav">
                     <li class="nav-item ">
-                        <a href="/figuration/get-started/quick-start/" class="nav-link">Get Started</a>
+                        <a href="/get-started/quick-start/" class="nav-link">Get Started</a>
                     </li>
                     <li class="nav-item ">
-                        <a href="/figuration/layout/overview/" class="nav-link">Layout</a>
+                        <a href="/layout/overview/" class="nav-link">Layout</a>
                     </li>
                     <li class="nav-item ">
-                        <a href="/figuration/content/reboot/" class="nav-link">Content</a>
+                        <a href="/content/reboot/" class="nav-link">Content</a>
                     </li>
                     <li class="nav-item active">
-                        <a href="/figuration/components/alerts/" class="nav-link">Components</a>
+                        <a href="/components/alerts/" class="nav-link">Components</a>
                     </li>
                     <li class="nav-item ">
-                        <a href="/figuration/widgets/overview" class="nav-link">Widgets</a>
+                        <a href="/widgets/overview" class="nav-link">Widgets</a>
                     </li>
                     <li class="nav-item ">
-                        <a href="/figuration/about/overview" class="nav-link">About</a>
+                        <a href="/about/overview" class="nav-link">About</a>
                     </li>
+                    <li class="nav-item pull-md-right">
+                        <a href="https://github.com/cast-org/figuration" class="nav-link"><small>GitHub</small></a>
+                    <li>
                 </ul>
             </div>
         </nav>
@@ -129,7 +132,7 @@
         
 
         <li class="nav-item">
-          <a href="/figuration/components/alerts" class="nav-link ">
+          <a href="/components/alerts" class="nav-link ">
             Alerts
           </a>
         </li>
@@ -141,7 +144,7 @@
         
 
         <li class="nav-item">
-          <a href="/figuration/components/breadcrumb" class="nav-link ">
+          <a href="/components/breadcrumb" class="nav-link ">
             Breadcrumb
           </a>
         </li>
@@ -153,7 +156,7 @@
         
 
         <li class="nav-item">
-          <a href="/figuration/components/button-group" class="nav-link ">
+          <a href="/components/button-group" class="nav-link ">
             Button Group
           </a>
         </li>
@@ -165,7 +168,7 @@
         
 
         <li class="nav-item">
-          <a href="/figuration/components/cards" class="nav-link ">
+          <a href="/components/cards" class="nav-link ">
             Cards
           </a>
         </li>
@@ -177,7 +180,7 @@
         
 
         <li class="nav-item">
-          <a href="/figuration/components/grid-lines" class="nav-link ">
+          <a href="/components/grid-lines" class="nav-link ">
             Grid Lines
           </a>
         </li>
@@ -189,7 +192,7 @@
         
 
         <li class="nav-item">
-          <a href="/figuration/components/input-group" class="nav-link ">
+          <a href="/components/input-group" class="nav-link ">
             Input Group
           </a>
         </li>
@@ -201,7 +204,7 @@
         
 
         <li class="nav-item">
-          <a href="/figuration/components/jumbotron" class="nav-link ">
+          <a href="/components/jumbotron" class="nav-link ">
             Jumbotron
           </a>
         </li>
@@ -213,7 +216,7 @@
         
 
         <li class="nav-item">
-          <a href="/figuration/components/list-group" class="nav-link active">
+          <a href="/components/list-group" class="nav-link active">
             List Group
           </a>
         </li>
@@ -225,7 +228,7 @@
         
 
         <li class="nav-item">
-          <a href="/figuration/components/media-object" class="nav-link ">
+          <a href="/components/media-object" class="nav-link ">
             Media Object
           </a>
         </li>
@@ -237,7 +240,7 @@
         
 
         <li class="nav-item">
-          <a href="/figuration/components/navbar" class="nav-link ">
+          <a href="/components/navbar" class="nav-link ">
             Navbar
           </a>
         </li>
@@ -249,7 +252,7 @@
         
 
         <li class="nav-item">
-          <a href="/figuration/components/navs" class="nav-link ">
+          <a href="/components/navs" class="nav-link ">
             Navs
           </a>
         </li>
@@ -261,7 +264,7 @@
         
 
         <li class="nav-item">
-          <a href="/figuration/components/pagination" class="nav-link ">
+          <a href="/components/pagination" class="nav-link ">
             Pagination
           </a>
         </li>
@@ -273,7 +276,7 @@
         
 
         <li class="nav-item">
-          <a href="/figuration/components/progress" class="nav-link ">
+          <a href="/components/progress" class="nav-link ">
             Progress
           </a>
         </li>
@@ -285,7 +288,7 @@
         
 
         <li class="nav-item">
-          <a href="/figuration/components/tags" class="nav-link ">
+          <a href="/components/tags" class="nav-link ">
             Tags
           </a>
         </li>
@@ -297,7 +300,7 @@
         
 
         <li class="nav-item">
-          <a href="/figuration/components/utilities" class="nav-link ">
+          <a href="/components/utilities" class="nav-link ">
             Utilities
           </a>
         </li>
@@ -535,7 +538,11 @@
 
     <footer class="cf-footer">
     <div class="container">
-        <p>Currently version: 0.1.0</p>
+        <p>
+            Currently version: 1.0.0
+            <br />
+            <a href="https://github.com/cast-org/figuration">GitHub Project</a> - <a href="https://github.com/cast-org/figuration/issues">Issues</a>
+        </p>
         <p>
             &copy; 2013-2016 <a href="http://www.cast.org">CAST, Inc.</a>
             <br />
@@ -550,7 +557,7 @@
         <strong>Funding generously provided by:</strong>
         <div class="media footer-partners">
             <div class="media-left">
-                <img src="/figuration/assets/img/aem-logo.png" class="media-object" width="40" height="40" alt="AEM logo" />
+                <img src="/assets/img/aem-logo.png" class="media-object" width="40" height="40" alt="AEM logo" />
             </div>
             <div class="media-body">
                 <span class="h6 partner-title"><a href="http://aem.cast.org">National Center on Accessible Educational Materials at CAST, Inc.</a></span><br />
