--- a/scss/mixins/_keyboard-focus.scss
+++ b/scss/mixins/_keyboard-focus.scss
@@ -1,9 +1,8 @@
 // WebKit-style focus when using keyboard navigation
 @mixin keyboard-focus() {
     // scss-lint:disable DuplicateProperty
-    // Default
-    outline: thin dotted;
-    // WebKit
+    // WebKit-specific. Other browsers will keep their default outline style.
+    // `outline: initial` erroneously removes the outline in Firefox altogether.
     outline: 5px auto -webkit-focus-ring-color;
     outline-offset: -2px;
     // scss-lint:enable DuplicateProperty
