Docs - supporting CSS/JS for player example

--- a/docs/assets/scss/_player.scss
+++ b/docs/assets/scss/_player.scss
@@ -3,7 +3,7 @@
 // TODO: Fix this file - bad layout and whatnot for now until after launch
 
 .video-wrapper {
-    width: 600px;
+    /* width: 600px; */
 }
 .video-transcript {
     position: relative;
