Docs - remove CFW from page header

--- a/docs/_includes/page-header.html
+++ b/docs/_includes/page-header.html
@@ -1,7 +1,7 @@
 {% if page.group == "get-started" %}
     <h1>Get Started</h1>
     <p class="lead">
-        An overview of CFW, including why we built it, how to use it, basic templates, examples, and more.
+        An overview of Figuration, including why we built it, how to use it, basic templates, examples, and more.
     </p>
 {% elsif page.group == "layout" %}
     <h1>Layout</h1>
