--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -34,6 +34,14 @@ $enable-transitions:    true !default;      // true
 $enable-grid-classes:   true !default;      // true
 $enable-print-styles:   true !default;      // true
 $enable-palette:        true !default;      // true
+$enable-flex-full:      false !default;     // false -- all-in flex mode
+$enable-flex-opt:       true !default;      // true -- opt-in via class mode
+
+// If both flex modes selected -- disable the opt-in mode
+@if $enable-flex-full and $enable-flex-opt {
+    $enable-flex-opt: false;
+    @warn "Both flex modes cannot be enabled at the same time.  Opt-in mode CSS generation is being disabled.";
+}
 
 
 // Grayscale
