--- a/scss/component/_grid.scss
+++ b/scss/component/_grid.scss
@@ -28,6 +28,16 @@
     .row {
         @include make-row();
     }
+
+    @if $enable-flex-opt {
+        .row-flex {
+            display: flex;
+            flex-wrap: wrap;
+
+            // Disable clearfix or strange things happen with flex alignments
+            @include clearfix-disable();
+        }
+    }
 }
 
 // Columns
@@ -35,19 +45,48 @@
 // Common styles for grid columns
 
 @if $enable-grid-classes {
-    // Hack in a base class to extend upon, since it can't be done within the mixins
-    // Additional per breakpoint base classes punched in also - find them in the `make-grid-columns()` mixin
-    .col {
+    // Use a placeholder selector to extend upon
+    // Additional per breakpoint placholders - found in the `make-grid-columns()` mixin
+    %col {
         position: relative;
-        min-height: 1px;
+        min-height: 1px; // Prevent collapsing
         padding-right: ($grid-gutter-width / 2);
         padding-left:  ($grid-gutter-width / 2);
+    }
+
+    %col-flex {
+        width: 100%;
     }
 
     @each $breakpoint in map-keys($grid-breakpoints) {
         @for $i from 1 through $grid-columns {
             .col-#{$breakpoint}-#{$i} {
-                @extend .col;
+                @extend %col;
+
+                @if $enable-flex-full {
+                    @extend %col-flex;
+                }
+            }
+
+            @if $enable-flex-opt {
+                .row-flex .col-#{$breakpoint}-#{$i} {
+                    @extend %col-flex;
+                }
+            }
+        }
+
+        // Default for basic `.col-{bp}` classes for equal-width flexbox columns
+        @if $enable-flex-full {
+            .col-#{$breakpoint} {
+                @extend %col;
+                @extend %col-flex;
+            }
+        }
+
+        @if $enable-flex-opt {
+            .row-flex .col-#{$breakpoint} {
+                @extend %col;
+                @extend %col-flex;
             }
         }
     }
