--- a/docs/assets/css/docs.css
+++ b/docs/assets/css/docs.css
@@ -601,6 +601,15 @@ h4 > code {
   border: 1px solid rgba(34, 68, 102, 0.2);
 }
 
+.cf-example-row-flex .row {
+  border: 1px solid rgba(34, 68, 102, 0.5);
+}
+
+.cf-example-row-flex-v .row {
+  height: 7rem;
+  border: 1px solid rgba(34, 68, 102, 0.5);
+}
+
 .cf-example > .form-control + .form-control {
   margin-top: .5rem;
 }
