--- a/scss/component/_input-group.scss
+++ b/scss/component/_input-group.scss
@@ -1,12 +1,16 @@
 // Base styles
 .input-group {
     position: relative;
-    display: table;
     width: 100%;
 
-    // Prevent input groups from inheriting border styles from table cells when
-    // placed within a table.
-    border-collapse: separate;
+    @if $enable-flex-full {
+        display: flex;
+    } @else {
+        display: table;
+        // Prevent input groups from inheriting border styles from table cells when
+        // placed within a table.
+        border-collapse: separate;
+    }
 
     .form-control {
         // Ensure that the input is always above the *appended* addon button for
@@ -18,33 +22,70 @@
             z-index: 3;
         }
 
-        // IE9 fubars the placeholder attribute in text inputs and the arrows on
-        // select elements in input groups. To fix it, we float the input. Details:
-        // https://github.com/twbs/bootstrap/issues/11561#issuecomment-28936855
-        float: left;
-        width: 100%;
+        @if $enable-flex-full {
+            flex: 1;
+        } @else {
+            // IE9 fubars the placeholder attribute in text inputs and the arrows on
+            // select elements in input groups. To fix it, we float the input. Details:
+            // https://github.com/twbs/bootstrap/issues/11561#issuecomment-28936855
+            float: left;
+            width: 100%;
+        }
 
         margin-bottom: 0;
+    }
+}
+
+@if $enable-flex-opt {
+    .input-group-flex {
+        display: flex;
+        border-collapse: initial;
+
+        .form-control {
+            flex: 1;
+            float: initial;
+        }
     }
 }
 
 .input-group-addon,
 .input-group-btn,
 .input-group .form-control {
-    display: table-cell;
-
+    @if not $enable-flex-full {
+        display: table-cell;
+    }
     &:not(:first-child):not(:last-child) {
         @include border-radius(0);
+    }
+}
+@if $enable-flex-opt {
+    .input-group-flex {
+        .input-group-addon,
+        .input-group-btn {
+            display: inline-block;
+        }
+        .form-control {
+            display: block;
+        }
     }
 }
 
 .input-group-addon,
 .input-group-btn {
-    width: 1%;
+    @if not $enable-flex-full {
+        width: 1%;
+    }
     white-space: nowrap;
     vertical-align: middle; // Match the inputs
 }
-
+@if $enable-flex-opt {
+    .input-group-flex {
+        .input-group-addon,
+        .input-group-btn {
+            width: auto;
+        }
+    }
+}
 
 // Sizing options
 // Remix the default form control sizing classes into new ones for easier manipulation.
