--- a/scss/core/_reboot.scss
+++ b/scss/core/_reboot.scss
@@ -309,7 +309,7 @@ button:focus {
     outline: 5px auto -webkit-focus-ring-color;
 }
 
-input:not([type="checkbox"]):not([type="radio"]),
+input,
 button,
 select,
 textarea {
@@ -321,6 +321,14 @@ textarea {
     line-height: inherit;
     // iOS adds rounded borders by default
     border-radius: 0;
+}
+[type="checkbox"] {
+    -webkit-appearance: checkbox;
+    -webkit-border-radius: 5px;
+}
+[type="radio"] {
+    -webkit-appearance: radio;
+    -webkit-border-radius: 8px;
 }
 
 textarea {
